--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+port_scanner = "0.1.5"
 stun-client = "0.1.2"
 tokio = { version = "1.28.2", features = ["full"] }
