--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+chrono = "0.4.26"
 port_scanner = "0.1.5"
 stun-client = "0.1.2"
 tokio = { version = "1.28.2", features = ["full"] }
