--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 chrono = "0.4.26"
+core_extensions = { version = "1.5.3", features = ["on_drop"]}
+ctrlc = "3.4.0"
+nix = "0.26.2"
 port_scanner = "0.1.5"
 stun-client = "0.1.2"
+surge-ping = "0.8.0"
 tokio = { version = "1.28.2", features = ["full"] }
 wireguard-keys = "0.1.1"
