--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,7 +12,10 @@ core_extensions = { version = "1.5.3", features = ["on_drop"]}
 ctrlc = "3.4.0"
 nix = "0.26.2"
 port_scanner = "0.1.5"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
 stun-client = "0.1.2"
 surge-ping = "0.8.0"
 tokio = { version = "1.28.2", features = ["full"] }
+websockets = "0.3.0"
 wireguard-keys = "0.1.1"
