--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4.26"
 core_extensions = { version = "1.5.3", features = ["on_drop"]}
 ctrlc = "3.4.0"
 nix = "0.26.2"
+rand = "0.8.5"
 redis =  { version = "0.23.0", features = ["tls-native-tls"] }
 rustls = "0.21.1"
 serde = { version = "1.0.163", features = ["derive"] }
