--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,12 +16,11 @@ futures = "0.3.28"
 nix = "0.26.2"
 rand = "0.8.5"
 redis =  { version = "0.23.0", features = ["tokio-native-tls", "tls-native-tls", "tokio-native-tls-comp", "aio", "tokio-comp"] }
+reqwest = "0.11.18"
 rustls = "0.21.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 stun-client = "0.1.2"
 surge-ping = "0.8.0"
 tokio = { version = "1.28.2", features = ["full"] }
-tokio-native-tls = "0.3.1"
-websockets = "0.3.0"
 wireguard-keys = "0.1.1"
