--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,18 +9,14 @@ edition = "2021"
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 chrono = "0.4.26"
-core_extensions = { version = "1.5.3", features = ["on_drop"]}
 ctrlc = "3.4.0"
-ctrlc-async = "3.2.2"
 futures = "0.3.28"
 nix = "0.26.2"
 rand = "0.8.5"
-redis =  { version = "0.23.0", features = ["tokio-native-tls", "tls-native-tls", "tokio-native-tls-comp", "aio", "tokio-comp"] }
-reqwest = "0.11.18"
-rustls = "0.21.1"
+redis =  { version = "0.23.0", features = ["rustls", "tokio-rustls", "tokio-rustls-comp", "aio"] }
+reqwest = { version = "0.11.18", features = ["rustls-tls", "rustls"], default-features = false }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 stun-client = "0.1.2"
-surge-ping = "0.8.0"
 tokio = { version = "1.28.2", features = ["full"] }
 wireguard-keys = "0.1.1"
