--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 chrono = "0.4.26"
+clap = { version = "4.3.8", features = ["derive"] }
 ctrlc = "3.4.0"
 futures = "0.3.28"
 nix = "0.26.2"
+once_cell = "1.18.0"
 rand = "0.8.5"
 redis =  { version = "0.23.0", features = ["rustls", "tokio-rustls", "tokio-rustls-comp", "aio"] }
 reqwest = { version = "0.11.18", features = ["rustls-tls", "rustls"], default-features = false }
@@ -19,4 +21,5 @@ serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 stun-client = "0.1.2"
 tokio = { version = "1.28.2", features = ["full"] }
+toml = "0.7.4"
 wireguard-keys = "0.1.1"
