--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
+anyhow = { version = "1.0.71", features = ["backtrace"] }
 async-trait = "0.1.68"
 chrono = "0.4.26"
 clap = { version = "4.3.8", features = ["derive"] }
